# terraform-generator-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt
docs/: ARTIFACT_STORAGE.md  DEVELOPMENT_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_SUMMARY.md  PDD.md  PROMPT_GUIDE.md  README.md
output/5421c596-869b-410a-8f40-9d386256d985/: security_groups.tf  subnets.tf
output/c8185157-5c05-4092-a346-e449afcb42f0/: instances.tf  s3_buckets.tf
output/e5c30bef-ae80-49c0-bf20-b802e597a71c/: security_groups.tf
output/fa427f19-54ec-4b6d-b0a2-2985571e83d1/: instances.tf  s3_buckets.tf
schemas/: architecture_v1.json  input_v1.json
scripts/: run_worker.py
src/terraform_generator/: api.py  config.py  main.py
src/terraform_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/terraform_generator/domain/: exceptions.py  models.py
src/terraform_generator/events/: __init__.py  orchestrator.py  payloads.py
src/terraform_generator/extraction/: __init__.py  extractor.py  patterns.py
src/terraform_generator/ingestion/: loader.py
src/terraform_generator/input/: __init__.py  extractor.py  (+2 more)
tests/: TEST_SPECS.md  test.md
tests/integration/: test_pipeline.py
tests/unit/: test_extraction.py  test_generator.py  test_ingestion.py  test_input_extractor.py  test_input_validation.py  test_normalization.py  test_parsing.py  test_paths.py  test_service_analysis.py  test_storage.py  test_uploader_keys.py  test_validation.py  test_vibe_selector.py
(+29 files in other folders)
